# cis194

./: .gitignore  README.md  cis194.cabal  hq
src/: Common.hs
src/HomeWork1/: CreditCardValidation.hs  HanoiTower.hs
src/HomeWork12/: Risk.hs
src/HomeWork2/: Log.hs  LogAnalysis.hs
src/HomeWork3/: Golf.hs  test.hs
src/HomeWork4/: Folding.hs
src/HomeWork5/: Calc.hs  ExprT.hs  MinMax.hs  Mod7.hs  Parser.hs  StackVM.hs
src/HomeWork6/: Fibonacci.hs
src/HomeWork7/: Buffer.hs  Editor.hs  Homework7Tests.hs  JoinList.hs  Scrabble.hs  StringBufEditor.hs  StringBuffer.hs
test/HomeWork1/: CreditCardValidationSpec.hs  HanoiTowerSpec.hs
test/HomeWork2/: LogAnalysisSpec.hs
test/HomeWork3/: GolfSpec.hs
test/HomeWork4/: FoldingSpec.hs
test/HomeWork5/: CalcSpec.hs
test/HomeWork6/: FibonacciSpec.hs
